--- a/MoviesApp.DAL/MoviesApp.DAL.csproj
+++ b/MoviesApp.DAL/MoviesApp.DAL.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.4" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
   </ItemGroup>
 
   <ItemGroup>
